# TtTorrent

./: .gitignore  Cargo.toml  README.md  TODO.md  client_state.json  client_state.state  close_client.sh  close_daemon.sh  file.txt  help.txt  kamasutra.torrent  logs  peer_statuses.txt  tfile2.torrent  third_piece.txt  torrentfile.torrent
client_state/: TtTClient.state
client_state/torrent_files/: centOS.torrent  import.torrent  mandalorian.torrent  torrent_image.torrent
logs/: 0_stderr_log.txt  0_stdout_log.txt  1_stderr_log.txt  1_stdout_log.txt  log0.txt  log1.txt  log3.txt  output.txt  output2.txt  output3.txt  output4.txt
src/: client.rs  client_options.rs  disk.rs  disk_manager.rs  disk_writer.rs  file_download.rs  lib.rs  main.rs  messager.rs  peer.rs  peers.rs  terminal_client.rs  terminal_utils.rs  torrent.rs  torrent_file.rs  torrentfile_parser.rs  tracker.rs  utils.rs
src/client/: client_state.rs  downloader.rs  messager.rs  seeder.rs
src/client/downloader/: torrent_downloaders.rs
src/disk_manager/: torrent_context.rs
src/peer/: block_picker.rs  context.rs  peer_address.rs  peer_message.rs  peer_messages.rs
src/peer/block_picker/: block_picker_state.rs
src/peer/peer_messages/: handshake.rs
src/peers/: peer_connection.rs
src/torrent/: file_saver.rs  peer.rs  torrent_context.rs  torrent_file.rs  torrent_info.rs  torrent_parser.rs  torrent_state.rs  tracker.rs
src/torrent/peer/: peer_connection.rs  peer_messages.rs
src/torrent/torrent_file/: bencoded_value.rs  parsers.rs  sha1hash.rs
src/torrent/torrent_parser/: parsing_utils.rs
src/torrent/tracker/: tracker_connection.rs
src/torrent_file/: mod.rs  parser.rs  parsers.rs  utils.rs
src/tracker/: connection.rs  tracker_connection.rs  tracker_event.rs  tracker_request.rs
src/utils/: bencode.rs  mod.rs  sha1hash.rs  terminal.rs
src/utils/bencode/: parsing.rs
test_data/folder_with_files/: foo.txt  import1.txt  pokemon_names.txt
test_folder/data/: import2.txt
test_project/: Cargo.toml
test_project/src/: client.rs  main.rs
tests/: parsing_torrent_file.rs  test_torrent_1.torrent
torrent_client/: .gitignore  Cargo.toml  README.md  TODO.md
torrent_client/src/: client.rs  lib.rs  main.rs  peer.rs  torrent.rs  utils.rs
torrent_client/src/client/: downloader.rs  seeder.rs
torrent_client/src/client/downloader/: file_writer.rs  torrent_downloaders.rs  torrents_reader.rs
torrent_client/src/client/downloader/file_writer/: torrent_writer.rs
torrent_client/src/client/downloader/torrent_downloaders/: peer_downloader.rs
torrent_client/src/client/downloader/torrents_reader/: torrent_downloader.rs
torrent_client/src/client/downloader/torrents_reader/torrent_downloader/: peer_downloader.rs
torrent_client/src/peer/: peer_address.rs  peer_messages.rs
torrent_client/src/torrent/: torrent_file.rs  torrent_parser.rs
torrent_client/src/torrent/torrent_file/: bencoded_value.rs  sha1hash.rs
torrent_client/src/tracker/: connection.rs
torrent_client/tests/common/: mod.rs
torrent_files/: ReDHaT.torrent  kamasutra.torrent  risk_of_rain.torrent  tfile2.torrent  warfare_dlc.torrent
(+8 files in other folders)
