[package]
name = "torrent_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tttorrent-daemon"
path = "src/main.rs"

[[bin]]
name = "tttorrent-client"
path = "src/terminal_utils.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
ctrlc = "3.4.1"
futures = "0.3.29"
getrandom = "0.2.11"
hex = "0.4.3"
interprocess = {verion = "1.2.1", features = ["tokio_support"]}
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
