[package]
name = "torrent_client"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[[bin]]
name = "tttorrent-client"
path = "src/main.rs"

[[bin]]
name = "tttorrent-ui"
path = "src/terminal_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tracing and error handling
anyhow = "1.0.76"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# async functionality
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
futures = "0.3.29"
reqwest = "0.11.22"
ctrlc = "3.4.1"

# serialization and deserialization
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
percent-encoding = "2.3.0"
hex = "0.4.3"

# communication between processes
interprocess = {verion = "1.2.1", features = ["tokio_support"]}

# utility
getrandom = "0.2.11"
sha1 = "0.10.6"
once_cell = "1.19.0"




