[package]
name = "torrent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
lazy_static = "1.4.0"
percent-encoding = "2.3.0"
reqwest = "0.11.22"
sha1 = "0.10.6"
tokio = { version = "1.34.0", features = ["full"] }
